enum-ptr-tests/tests/fail/union.stderr
error: EnumPtr only supports enums
 --> tests/fail/union.rs:6:7
  |
6 | union Foo<'a, 'b> {
  |       ^^^
